# kseqi

./: Cargo.toml  README.md  configuration.md  seq.conf.example
.github/workflows/: bui.yml
src/: dev.rs  dispatch.rs  grab.rs  lib.rs  signal.rs
src/conf/: fs.rs  mod.rs  parse.rs
src/dispatch/: key_changer.rs
src/xdl/: data.rs  err.rs  keysym.rs  mod.rs  util.rs  xinput1.rs  xinput2.rs  xtest.rs
